// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`バーストが正しく発動される 1`] = `
[
  {
    "activePlayerId": "otherPlayer",
    "effect": {
      "burst": {
        "recoverBattery": 3,
        "turnStartBatteryCorrect": 1,
        "type": "RecoverBattery",
      },
      "burstPlayer": "burstPlayer",
      "name": "BurstEffect",
    },
    "players": [
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 5,
            "turnStartBatteryCorrect": 1,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "otherPlayer",
      },
      {
        "armdozer": {
          "battery": 4,
          "burst": {
            "recoverBattery": 3,
            "turnStartBatteryCorrect": 1,
            "type": "RecoverBattery",
          },
          "effects": [
            {
              "correctBattery": 1,
              "period": {
                "type": "SpecialPeriod",
              },
              "type": "TurnStartBatteryCorrect",
            },
          ],
          "enableBurst": false,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "burstPlayer",
      },
    ],
  },
]
`;

exports[`パイロットスキルが正しく発動される 1`] = `
[
  {
    "activePlayerId": "otherPlayer",
    "effect": {
      "invokerId": "burstPlayer",
      "name": "PilotSkillEffect",
      "skill": {
        "recoverBattery": 2,
        "type": "RecoverBatterySkill",
      },
    },
    "players": [
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 5,
            "turnStartBatteryCorrect": 1,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "otherPlayer",
      },
      {
        "armdozer": {
          "battery": 3,
          "burst": {
            "recoverBattery": 5,
            "turnStartBatteryCorrect": 1,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": false,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "burstPlayer",
      },
    ],
  },
]
`;

exports[`強制ターン終了を発動した場合、バースト効果、UpdateRemainingTurn、InputCommandが実行される 1`] = `
[
  {
    "activePlayerId": "burstPlayer",
    "effect": {
      "burst": {
        "recoverBattery": 2,
        "type": "ForceTurnEnd",
      },
      "burstPlayer": "burstPlayer",
      "name": "BurstEffect",
    },
    "players": [
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 5,
            "turnStartBatteryCorrect": 1,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "otherPlayer",
      },
      {
        "armdozer": {
          "battery": 3,
          "burst": {
            "recoverBattery": 2,
            "type": "ForceTurnEnd",
          },
          "effects": [
            {
              "period": {
                "remainingTurn": 2,
                "type": "TurnLimit",
              },
              "type": "HalveCorrectPower",
            },
            {
              "damage": 2000,
              "effect": "Lightning",
              "period": {
                "remainingTurn": 1,
                "type": "TurnLimit",
              },
              "type": "TryReflect",
            },
          ],
          "enableBurst": false,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "burstPlayer",
      },
    ],
  },
  {
    "activePlayerId": "burstPlayer",
    "effect": {
      "endArmdozerEffects": [
        {
          "effect": {
            "damage": 2000,
            "effect": "Lightning",
            "period": {
              "remainingTurn": 0,
              "type": "TurnLimit",
            },
            "type": "TryReflect",
          },
          "playerId": "burstPlayer",
        },
      ],
      "name": "UpdateRemainingTurn",
    },
    "players": [
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 5,
            "turnStartBatteryCorrect": 1,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "otherPlayer",
      },
      {
        "armdozer": {
          "battery": 3,
          "burst": {
            "recoverBattery": 2,
            "type": "ForceTurnEnd",
          },
          "effects": [
            {
              "period": {
                "remainingTurn": 1,
                "type": "TurnLimit",
              },
              "type": "HalveCorrectPower",
            },
          ],
          "enableBurst": false,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "burstPlayer",
      },
    ],
  },
  {
    "activePlayerId": "burstPlayer",
    "effect": {
      "name": "InputCommand",
      "players": [
        {
          "command": [
            {
              "battery": 0,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 1,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 2,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 3,
              "type": "BATTERY_COMMAND",
            },
            {
              "type": "PILOT_SKILL_COMMAND",
            },
          ],
          "playerId": "burstPlayer",
          "selectable": true,
        },
        {
          "command": [
            {
              "battery": 0,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 1,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 2,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 3,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 4,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 5,
              "type": "BATTERY_COMMAND",
            },
            {
              "type": "BURST_COMMAND",
            },
            {
              "type": "PILOT_SKILL_COMMAND",
            },
          ],
          "playerId": "otherPlayer",
          "selectable": true,
        },
      ],
    },
    "players": [
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 5,
            "turnStartBatteryCorrect": 1,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "otherPlayer",
      },
      {
        "armdozer": {
          "battery": 3,
          "burst": {
            "recoverBattery": 2,
            "type": "ForceTurnEnd",
          },
          "effects": [
            {
              "period": {
                "remainingTurn": 1,
                "type": "TurnLimit",
              },
              "type": "HalveCorrectPower",
            },
          ],
          "enableBurst": false,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "burstPlayer",
      },
    ],
  },
]
`;
